--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-ui": "^2.3.4",
     "firebase": "^4.12.1",
     "vue": "^2.5.11",
+    "vue-localstorage": "^0.6.2",
     "vue-router": "^3.0.1"
   },
   "browserslist": [
